[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/World/LevelTemplate/Gates/BlueGates.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/World/LevelTemplate/Gates/GreenGates.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/World/LevelTemplate/Gates/RedGates.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/World/LevelTemplate/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/World/LevelTemplate/GateTogglers.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/World/Levels/Levels.gd" type="Script" id=6]
[ext_resource path="res://src/World/LevelTemplate/LavaDetector.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/World/LevelTemplate/LevelDetector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Actors/Player2.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Actors/Player1.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/World/Detectors/GateToggler.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/World/ScreenTransition.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/World/Levels/FadeIn.gd" type="Script" id=13]
[ext_resource path="res://src/World/LevelTemplate/Key.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/World/LevelTemplate/Door.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 546.001, 44.0938 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="L7" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 65535, 4, 1, 0, 4, 0, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 1, 8, 4, 1, 9, 4, 1, 10, 4, 1, 11, 4, 1, 12, 4, 1, 13, 4, 1, 14, 4, 1, 15, 4, 1, 16, 4, 1, 17, 1, 1, 18, 4, 1, 19, 4, 1, 20, 1, 1, 21, 4, 1, 22, 4, 1, 23, 4, 2, 24, 5, 0, 25, 5, 0, 26, 5, 0, 131071, 4, 1, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 65553, 3, 131072, 65554, 536870919, 0, 65555, 7, 0, 65556, 3, 131072, 65557, 536870919, 0, 65558, 7, 0, 65559, 7, 0, 65562, 5, 0, 196607, 4, 1, 131072, 7, 0, 131073, 7, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 131084, 7, 0, 131085, 7, 0, 131086, 7, 0, 131087, 7, 0, 131088, 7, 0, 131089, 7, 0, 131090, 536870919, 0, 131091, 7, 0, 131092, 7, 0, 131093, 536870919, 0, 131094, 7, 0, 131095, 7, 0, 131098, 5, 0, 262143, 4, 1, 196608, 7, 0, 196609, 7, 0, 196610, 7, 0, 196611, 7, 0, 196612, 7, 0, 196613, 7, 0, 196614, 7, 0, 196615, 7, 0, 196616, 7, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 0, 196621, 7, 0, 196622, 7, 0, 196623, 7, 0, 196624, 7, 0, 196625, 7, 0, 196626, 7, 0, 196627, 7, 0, 196628, 7, 0, 196629, 536870919, 0, 196630, 7, 0, 196631, 7, 0, 196634, 5, 0, 327679, 4, 1, 262144, 7, 0, 262145, 7, 0, 262146, 7, 0, 262147, 7, 0, 262148, 7, 0, 262149, 7, 0, 262150, 7, 0, 262151, 7, 0, 262152, 7, 0, 262153, 7, 0, 262154, 7, 0, 262155, 7, 0, 262156, 7, 0, 262157, 7, 0, 262158, 7, 0, 262159, 7, 0, 262160, 7, 0, 262161, 3, 0, 262162, 536870919, 0, 262163, 7, 0, 262164, 3, 0, 262165, 536870919, 0, 262166, 7, 0, 262167, 7, 0, 262170, 5, 0, 393215, 4, 1, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 327687, 7, 0, 327688, 7, 0, 327689, 7, 0, 327690, 7, 0, 327691, 7, 0, 327692, 7, 0, 327693, 7, 0, 327694, 7, 0, 327695, 7, 0, 327696, 7, 0, 327697, 3, 65536, 327698, 536870919, 0, 327699, 536870919, 0, 327700, 3, 65536, 327701, 536870919, 0, 327702, 7, 0, 327703, 7, 0, 327706, 5, 0, 458751, 4, 1, 393216, 7, 0, 393217, 7, 0, 393218, 7, 0, 393219, 7, 0, 393220, 7, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 393224, 7, 0, 393225, 7, 0, 393226, 7, 0, 393227, 7, 0, 393228, 7, 0, 393229, 7, 0, 393230, 7, 0, 393231, 7, 0, 393232, 7, 0, 393233, 3, 65536, 393234, 536870919, 0, 393235, 536870919, 0, 393236, 3, 65536, 393237, 536870919, 0, 393238, 7, 0, 393239, 7, 0, 393242, 5, 0, 524287, 4, 1, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 7, 0, 458767, 536870919, 0, 458768, 7, 0, 458769, 3, 65536, 458770, 536870919, 0, 458771, 536870919, 0, 458772, 3, 65536, 458773, 536870919, 0, 458774, 7, 0, 458775, 7, 0, 458778, 5, 0, 589823, 4, 1, 524288, 7, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 7, 0, 524293, 7, 0, 524294, 536870915, 0, 524295, 7, 0, 524296, 7, 0, 524297, 7, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 536870915, 0, 524303, 536870919, 0, 524304, 7, 0, 524305, 3, 65536, 524306, 536870919, 0, 524307, 536870919, 0, 524308, 3, 65536, 524309, 536870919, 0, 524310, 7, 0, 524311, 7, 0, 524314, 5, 0, 655359, 4, 1, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 536870919, 0, 589829, 536870919, 0, 589830, 536870915, 65536, 589831, 536870919, 0, 589832, 536870919, 0, 589833, 536870919, 0, 589834, 536870919, 0, 589835, 536870919, 0, 589836, 536870919, 0, 589837, 536870919, 0, 589838, 536870915, 65536, 589839, 536870919, 0, 589840, 536870919, 0, 589841, 3, 65536, 589842, 7, 0, 589843, 536870919, 0, 589844, 3, 65536, 589845, 536870919, 0, 589846, 7, 0, 589847, 7, 0, 589850, 5, 0, 720895, 4, 1, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 4, 0, 655365, 4, 1, 655366, 1, 131073, 655367, 4, 1, 655368, 4, 1, 655369, 4, 1, 655370, 4, 1, 655371, 4, 1, 655372, 4, 1, 655373, 4, 1, 655374, 1, 131073, 655375, 536870916, 1, 655376, 4, 1, 655377, 1, 131074, 655378, 7, 0, 655379, 7, 0, 655380, 3, 131072, 655381, 536870919, 0, 655382, 7, 0, 655383, 7, 0, 655386, 5, 0, 786431, 4, 1, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 7, 0, 720911, 7, 0, 720912, 7, 0, 720913, 7, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0, 720917, 7, 0, 720918, 7, 0, 720919, 7, 0, 720922, 5, 0, 851967, 4, 1, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 8, 0, 786453, 8, 0, 786454, 8, 0, 786455, 8, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 851968, 536870918, 0, 851969, 536870918, 0, 851970, 536870918, 0, 851971, 536870918, 0, 851972, 11, 0, 851973, 11, 0, 851974, 11, 0, 851975, 11, 0, 851976, 11, 0, 851977, 11, 0, 851978, 11, 0, 851979, 11, 0, 851980, 11, 0, 851981, 11, 0, 851982, 11, 0, 851983, 11, 0, 851984, 11, 0, 851985, 11, 0, 851986, 8, 0, 851987, 8, 0, 851988, 536870918, 0, 851989, 536870918, 0, 851990, 536870918, 0, 851991, 536870918, 0 )

[node name="GateTogglers" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 131079, 536870912, 65536, 131082, 536870912, 131072, 131085, 536870912, 0 )

[node name="RedGates" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 131089, 1, 0, 196625, 1, 0 )

[node name="GreenGates" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 786417, 0, 0, 720902, 1, 0 )

[node name="BlueGates" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 131092, 1, 0, 196628, 1, 0, 720910, 1, 0 )

[node name="LavaDetector" parent="." instance=ExtResource( 7 )]
position = Vector2( 1362, 1037 )

[node name="CollisionShape2D" parent="LavaDetector" index="0"]
position = Vector2( -478, 13.0938 )
shape = SubResource( 1 )

[node name="LevelDetector" parent="." instance=ExtResource( 8 )]
position = Vector2( 2009, 917 )

[node name="Key" parent="." instance=ExtResource( 14 )]
position = Vector2( 1779, 876 )

[node name="Door" parent="." instance=ExtResource( 15 )]
position = Vector2( 1643, 887 )

[node name="Player1" parent="." instance=ExtResource( 10 )]
position = Vector2( 127, 881 )

[node name="Player2" parent="." instance=ExtResource( 9 )]
position = Vector2( 56, 884 )

[node name="GateToggler2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1091, 194 )
color = "green"

[node name="GateToggler3" parent="." instance=ExtResource( 11 )]
position = Vector2( 849, 195 )
color = "red"

[node name="GateToggler4" parent="." instance=ExtResource( 11 )]
position = Vector2( 610, 193 )
color = "blue"

[node name="ScreenTransition" parent="." instance=ExtResource( 12 )]
nextLevel = 8

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 13 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/FadeIn = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="collected" from="Key" to="Door" method="_on_Key_collected"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="CanvasLayer" method="_on_AnimationPlayer_animation_finished"]

[editable path="LavaDetector"]
